# utkface-multitask

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
utkface-multitask/: __main__.py  data_analysis.ipynb
utkface-multitask/configs/: contrastive.yaml  multitask.yaml
utkface-multitask/mask_inference/: inference.py  requirements.txt
utkface-multitask/src/data/: augmentations.py  dataset.py
utkface-multitask/src/models/: backbone.py  contrastive_temp007_5_classes.ckpt  contrastive_temp007_6_classes.ckpt
utkface-multitask/src/trainers/: classification_module.py  contrastive_module.py
utkface_multitask/: __main__.py  train.py
utkface_multitask/configs/: contrastive.yaml  multitask.yaml
utkface_multitask/dataset/: data_analysis.ipynb
utkface_multitask/src/: datatypes.py
utkface_multitask/src/data/: augmentations.py  dataset.py
utkface_multitask/src/models/: backbone.py
utkface_multitask/src/trainers/: classification_module.py  contrastive_module.py
utkface_multitask/src/utils/: logger.py
