[project]
name = "utkface-multitask"
description = "Contrastive Pretraining and Multitask Learning for Age Classification with Face Segmentation on UTKFace Dataset"
authors = [{"name" = "Umut DUNDAR", "email" = "dundar.umut@metu.edu.tr"}]
license = "MIT"
dynamic = ["version", "readme"]

requires-python = ">=3.10.0, <3.11.0"

dependencies = [
"hydra-core",
"torch >= 2.2.1",
"lightning >= 2.2.1",
"transformers >= 4.38.2",
"wandb >= 0.16.4",
"pandas >= 2.2.1",
"numpy >= 1.26.4",
"matplotlib >= 3.5.1",
"seaborn >= 0.11.2",
"scipy >= 1.7.3",
"tiktoken >= 0.9.0",
"typer >= 0.4.0",
"opencv-python>=4.8.0",
"albumentations >= 1.3.0",
"torchvision >= 0.16.0",

]


[project.optional-dependencies]
dev = ["pre-commit", "mypy", "setuptools", "wheel", "build"]

[project.scripts]
utkface_multitask = "utkface_multitask.__main__"

[tool.setuptools.dynamic]
readme = { file = "README.md" }
version = { attr = "utkface_multitask.__version__" }

[tool.setuptools.packages.find]
exclude = ["data"]

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"
